--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 
   overflow: hidden;
   transition: 0.3s ease;
+  position: fixed;
+  top: 10px;
+  margin-bottom: 60px;
+ 
+  border-radius: 20px;
  
 }
 .topnav a {
@@ -37,6 +42,14 @@
     
 
   }
+
+  body {
+    background-image: url(back1.avif);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    margin-top: 100px;
+}
 
 
 
